# substrate-node-devux

./: Cargo.toml  README.md  launch_chain_alice.sh  launch_chain_bob.sh  purge.sh
cli/: Cargo.toml
cli/src/: chain_spec.rs  service.rs
executor/: Cargo.toml
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: bdevux.rs  lib.rs
src/: main.rs
