[[bin]]
name = 'bdevux'
path = 'src/main.rs'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '1.0.0'

[dependencies]
error-chain = '0.12'
cli = { package = "node-cli", path = "cli" }
futures = '0.1'
ctrlc = { version = "3.0", features = ["termination"] }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[workspace]
members = [
	"cli",
	"executor",
	"primitives",
	"runtime",
]
exclude = [
  "runtime2",
  "src2",
]
