[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime'
version = '1.0.0'
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.client]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.runtime-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.parity-codec-derive]
default-features = false
version = '3.0'

[dependencies.bassets]
default-features = false
git = "https://github.com/ibchain/srml-bdevux-assets.git"
package = "bdevux-assets"
rev = "46d306523b91b138a147d43f80f8781d1f871fc4"

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    "consensus_authorities/std",
    "parity-codec-derive/std",
    "bassets/std",
]
