[package]
name = "node-runtime"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
aura = { package = "srml-aura", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
consensus = { package = "srml-consensus", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
contract = { package = "srml-contract", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
council = { package = "srml-council", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
democracy = { package = "srml-democracy", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
session = { package = "srml-session", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
staking = { package = "srml-staking", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
treasury = { package = "srml-treasury", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
node-primitives = { path = "../primitives", default-features = false }
consensus_aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
rustc-hex = { version = "2.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", optional = true }
consensus_authorities = { package = "substrate-consensus-authorities", git = "https://github.com/paritytech/substrate.git",tag = "v1.0.0rc1", default-features = false }
parity-codec-derive = {default-features = false, version = '3.1'}

[dependencies.bassets]
default-features = false
package = "bdevux-assets"
git = "https://github.com/ibchain/srml-bdevux-assets.git"
rev = "ce65bc936ac6811ba77920934aeaa7cfddee78e8"

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"runtime_primitives/std",
	"support/std",
	"balances/std",
	"consensus/std",
	"contract/std",
	"council/std",
	"democracy/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"treasury/std",
	"sudo/std",
	"version/std",
	"node-primitives/std",
	"serde",
	"safe-mix/std",
	"client/std",
	"consensus_aura/std",
	"rustc-hex",
	"hex-literal",
	"serde",
	"substrate-keyring",
  "consensus_authorities/std",
  "parity-codec-derive/std",
  "bassets/std",
]
